# mdsd

./: .gitignore  LICENSE  README.md  activate_env  install_all.sh  install_all_externals.sh  install_external.sh  mkdocs.yml  requirements_dev.txt  run_code_reformat.sh  run_tests.sh
examples/image_tool/executables/bg/: CMakeLists.txt
examples/image_tool/executables/bg/src/: main.cpp
examples/image_tool/my_image_lib/: CMakeLists.txt
examples/image_tool/my_image_lib/model/: background_subtraction.algo  background_subtraction.item  image.item
examples/image_tool/my_image_lib/ref/: BackgroundSubtraction.ipynb
examples/image_tool/my_image_lib/src/my_image_lib/: Image.cpp  Image.h  histogram.h  medianfilter.h  tools.h
examples/image_tool/my_image_lib/src/my_image_lib/background_subtraction/: AlgoBackgroundSubtractionImpl.h
examples/image_tool/my_image_lib/tests/: basic.cpp
framework/algo_codegen_python/: conftest.py  run_black.sh  run_tests.sh  setup.cfg  setup.py
framework/algo_codegen_python/algo_codegen_python/: codegen_python.py
framework/algo_codegen_python/tests/: test_basic.py  test_generated_code_mean_algo.py
framework/algo_codegen_python/tests/basic/: mean_algo2.algo  mean_algo_bad_datatype.algo  mean_algo_with_shared_ptr.algo
framework/algo_codegen_python/tests/model/: data.item  mean_algo.algo
framework/item_codegen_python/: conftest.py  run_black.sh  run_tests.sh  setup.cfg  setup.py
framework/item_codegen_python/item_codegen_python/: codegen_python.py  common.py  constants.py  enum.py  struct.py
framework/item_codegen_python/tests/: test_big_example.py  test_fixpoint.py  test_generatedcode_embedded.py  test_generatedcode_regression.py  test_io.py  test_property_demo.py  test_string.py
framework/item_codegen_python/tests/model/: big_example.item
framework/item_codegen_python/tests/model/ref/big_example/: ABC.regex_ref  Header.regex_ref  MultiMessage.regex_ref  MyOtherConstants.regex_ref  OnOff.regex_ref  Polygon.regex_ref  TypeSelector.regex_ref
framework/item_lang/: README.md  requirements_dev.txt  run_black.sh  run_tests.sh  setup.cfg  setup.py
framework/item_lang/doc/: architecture.md  develop.md  howto.md  install.md
framework/item_lang/doc/images/: item_lang.pu
framework/item_lang/item_lang/: __init__.py  attributes.py  common.py  item_lang.tx  metamodel_classes.py  metamodel_formula.py  properties.py  validation.py
framework/item_lang/tests/: test_attr_ref.py  test_attributes.py  test_common.py  test_constants.py  test_embedded.py  test_enum.py  test_examples.py  test_filebased_tests.py  test_if_attr.py  test_include_path.py  test_introspection_tools.py  test_properties.py
framework/item_lang/tests/model/: a.item  b.item  big_example.item
framework/item_lang/tests/model/filebased_tests/arrays/: bad_dim_after_array.item  good1.item
framework/item_lang/tests/model/filebased_tests/char/: bad_defaultString_not_allowed_for_non_char.item  bad_double_default.item  bad_embedded1.item  bad_embedded2.item  bad_less_than_one_char_as_default_for_a_char.item  bad_more_than_one_char_as_default_for_a_char.item  bad_multidim_str.item  good.item
framework/item_lang/tests/model/filebased_tests/embedded/: bad_bitcount_too_high.item  bad_bitcount_too_low.item  bad_dynamic_embedded_array_not_allowed.item  bad_restricted1.item  bad_restricted2.item  good.item
framework/item_lang/tests/model/filebased_tests/fixedpoint/: bad1_fp_with_lsb_and_msb_at_the_same_time.item  bad2_fp_with_no_integral_type.item  bad3_fp_with_missing_lsb_and_msb.item  good1.item
framework/item_lang/tests/model/filebased_tests/if_attr/: bad_if_uses_attribute_defined_later.item  bad_use_if_attribute_in_array_index.item  bad_use_if_attribute_in_array_index2.item  bad_use_if_attribute_in_predicate.item  good.item
framework/item_lang/tests/model/filebased_tests/property_tests/: bad2_times_per_message3.item  bad4_variant1.item  bad4_variant2.item  bad4_variant_size_too_small.item  bad_bad_value_for_bool_property.item  bad_missing_mandatory_prop1.item  bad_missing_mandatory_prop2.item  bad_not_applicable_scalar_item_for_array.item  bad_not_applicable_scalar_prop_for_struct.item  bad_times_per_message1.item  bad_times_per_message2.item  bad_times_per_message3.item  good1.item  good2_times_per_message.item  good2_times_per_message2.item  good2_times_per_message3.item  good3.item  good4_variant.item
framework/item_lang/tests/model/filebased_tests/unique_names/: bad_attr_name_not_unique1.item  bad_attr_name_not_unique2.item  good.item
framework/item_lang/tests/model/filebased_tests/validation_check_Attribute/: bad1.item  bad2.item  bad3.item  bad4.item  good1.item
framework/item_lang/tests/model/filebased_tests/validation_check_Constants/: bad1.item  good1.item
framework/item_lang/tests/model/filebased_tests/validation_check_Property/: bad1.item  bad2.item  bad3.item  good1.item
framework/item_lang/tests/model/search_path/: test_a.item
framework/mdsd_support_library_cpp/: CMakeLists.txt  eval_coverage.sh  ide.sh  run_tests.sh
framework/mdsd_support_library_cpp/src/mdsd/: item_io.h  item_support.h  virtual_attribute_support.h  virtual_struct.h
framework/mdsd_support_library_cpp/src/mdsd/item/: String.h  array_variant_check_and_adapt.h  basic_visitors.h  embedded_support.h  init_default_values.h  misc.h  print.h  scan.h
framework/mdsd_support_library_cpp/tests/: basic_tests.cpp  fixedpoint.cpp  fixpoint.cpp  if_tests.cpp  io_tests.cpp  print_tests.cpp  scan_tests.cpp  string_tests.cpp  to_string.cpp  version_test.cpp  virtual_attribute.cpp
framework/mdsd_support_library_cpp/tests/io_tests/: AllInOne_default.txt
image_tool/cpp_wx_ext_lib/: CMakeLists.txt
image_tool/cpp_wx_ext_lib/res/: images_zip.h.in
image_tool/cpp_wx_ext_lib/src/wxExt/: wxImageFileDropTarget.h  wxImageReceiverInterface.h  wxImageViewer.h  wxImagesZip.cpp  wxInputImageViewer.h  wxMyMenu.h
image_tool/executables/bg/: CMakeLists.txt
image_tool/executables/bg/model/: parameters.item
image_tool/executables/bg/src/: main.cpp
image_tool/executables/simple/: CMakeLists.txt
(+182 files in other folders)
