[metadata]
name = item_codegen_python
author = Pierre Bayerl
author_email = pierre DOT bayerl AT googlemail DOT com
license = MIT
description = C++ code generator for item_lang
keywords = DSL, MDSD, code generation, IDL
url = https://github.com/goto40/mdsd
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = item_codegen_python
zip_safe = False
install_requires = item_lang
package_dir =
    item_codegen_python = item_codegen_python
setup_requires = wheel

[options.extras_require]
dev =
	click >=7.0, <8.0
	mkdocs
	black
	flake8
	coverage
	coveralls
	pytest
test =
	click >=7.0, <8.0
	flake8
	coverage
	coveralls
	pytest


[options.entry_points]

textx_generators =
	item_python = item_codegen_python.codegen_python:generate_python

[bdist_wheel]
universal=1

[flake8]
ignore = E741,W503
max-line-length = 120
exclude = .git/*,.eggs/*,
          build/*,site/*,venv*,
          .ropeproject/*
