[metadata]
name = item_lang
author = Pierre Bayerl
author_email = pierre DOT bayerl AT googlemail DOT com
license = MIT
description = DSL for item format descriptions
keywords = DSL, MDSD, code generation, IDL
url = https://github.com/goto40/mdsd
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = item_lang
zip_safe = False
include_package_data = True
install_requires = textX
package_dir =
    item_lang = item_lang
setup_requires = wheel

package_data = {* = *.tx}

[options.extras_require]
dev =
	click >=7.0, <8.0
	mkdocs
	black
	flake8
	coverage
	coveralls
	pytest
test =
	click >=7.0, <8.0
	flake8
	coverage
	coveralls
	pytest


[options.entry_points]

textx_languages =
	item = item_lang:lang

[bdist_wheel]
universal=1

[flake8]
ignore = E741,W503
max-line-length = 120
exclude = .git/*,.eggs/*,
          tests/perf/*,
          build/*,site/*,venv*,
          .ropeproject/*
